// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.NavBar.Header docKit example UU5.Bricks.NavBar.Header example01 1`] = `
<nav
  className="uu5-bricks-nav-bar uu5-bricks-nav-bar-size-m"
  id="uuID"
  style={
    Object {
      "MozTransitionDuration": "0.25s",
      "MsTransitionDuration": "0.25s",
      "OTransitionDuration": "0.25s",
      "WebkitTransitionDuration": "0.25s",
      "transitionDuration": "0.25s",
    }
  }
  title={null}
>
  <div
    className="uu5-bricks-nav-bar-body"
  >
    <nav-bar-header
      content="Header"
      id="uuID2"
    />
    <div
      className="uu5-bricks-nav-bar-cover"
      id="uuID-navCover"
      style={
        Object {
          "height": 0,
        }
      }
    >
      <div
        className="uu5-bricks-nav-bar-container"
        id="uuID-navContainer"
      >
        <nav-bar-nav
          key="nav-0"
        />
      </div>
    </div>
  </div>
</nav>
`;

exports[`UU5.Bricks.NavBar.Header props checkGrammar=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props checkGrammar=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props checkHighlight=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props checkHighlight=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props checkSpaces=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props checkSpaces=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props className="my-classname" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header my-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props className="test-classname" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header test-classname"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <UU5.Common.TextCorrectorContextConsumer
      key="0"
      text="This is Content from ContentMixin"
    />
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props content=12345 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    12345
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props controlled=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props controlled=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props default props 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props disabled=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props disabled=false 3`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props disabled=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.NavBar.Header props disabled=true 3`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.NavBar.Header props dynamic=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props dynamic=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props elementAttrs={"data":{"test":"data-test-value"}} 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props fullTextSearchPriority=0 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props hidden=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props hidden=false 3`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props hidden=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props hidden=true 3`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props id="myId" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="myId"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props id="test-id" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="test-id"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props name="myName" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="box" 3`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="inline" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="inline" 3`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="smallBox" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props noIndex=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props noIndex=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header uu5-noindex uu-fulltextsearch-0"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props noPrint=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props noPrint=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props pureRender=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props pureRender=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props selected=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props selected=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props style={"margin":8} 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={
    Object {
      "margin": 8,
    }
  }
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props textCorrector=false 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props textCorrector=true 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;

exports[`UU5.Bricks.NavBar.Header props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-nav-bar-header navbar-header"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <span
    className="uu5-bricks-nav-bar-header-brand"
  >
    <nav-bar-nav
      id="child01"
      key="child01"
    >
      <nav-bar-nav-item
        d="child02"
      >
        News
      </nav-bar-nav-item>
    </nav-bar-nav>
  </span>
  <Button
    bgStyle="transparent"
    className="uu5-bricks-nav-bar-header-hamburger"
    onClick={[Function]}
  >
    <Icon
      icon="mdi-menu"
    />
  </Button>
</div>
`;
